feat: add divs and information

--- a/index.html
+++ b/index.html
@@ -9,16 +9,45 @@
 <body>
     <header>
         <img src="" alt="pic">
-        <h1></h1>
-        <h2></h2>
+        <h1>Nikolai Vegera</h1>
+        <h2>Trainee Front-end developer</h2>
     </header>
     <main>
-        <div class="resume-left">
+        <aside>
+            <div class="contacts">
+                <ul>
+                    <li>Email: wilshere10000@gmail.com</li>
+                    <li>Telegram: @MikalaiMikhailavich</li>
+                    <li>Discord: mikalaiMikhailavich#7765</li>
+                    <li>VK: [Kolya Vegera](https://vk.com/mikalaivegera)</li>
+                </ul>
 
-        </div>
-        <div class="resume-right">
+            </div>
+            <div class="tech-skills">
+                <h3>Tech-skills</h3>
 
-        </div>
+            </div>
+            <div class="languages">
+                <h3>languages</h3>
+
+            </div>
+        </aside>
+        <section class="summary">
+            <h3>summary</h3>
+
+        </section>
+        <section class="code-example">
+            <h3>code-example</h3>
+
+        </section>
+        <section class="proffesional-experience">
+            <h3>proffesional-experience</h3>
+
+        </section>
+        <section class="education">
+            <h3>education</h3>
+
+        </section>
     </main>
     <footer>    
     </footer>   
