--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>HTML-CSS-Git</title>
 </head>
 <body>
     <header>
-        <img src="" alt="pic">
-        <h1>Nikolai Vegera</h1>
-        <h2>Trainee Front-end developer</h2>
+        <div class="photo">
+            <img src="my_avatar.jpg" alt="my_avatar">
+        </div>
+        <div>    
+            <h1>Nikolai Vegera</h1>
+            <h2>Trainee Front-end developer</h2>
+        </div>
     </header>
     <main>
         <aside>
@@ -21,23 +26,54 @@
                     <li>Discord: mikalaiMikhailavich#7765</li>
                     <li>VK: [Kolya Vegera](https://vk.com/mikalaivegera)</li>
                 </ul>
-
             </div>
             <div class="tech-skills">
                 <h3>Tech-skills</h3>
+                <ul>
+                    <li>Markdown</li>
+                    <li>Tools/Methodologies Git</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
 
             </div>
             <div class="languages">
                 <h3>languages</h3>
+                <ol>
+                    <li>Russian (native)</li>
+                    <li>English (A2)</li>
+                </ol>
 
             </div>
         </aside>
         <section class="summary">
-            <h3>summary</h3>
+            <h3>Summary</h3>
+            <p>I'm 25 years old. I have been working as a design engineer at a factory for 4 years.
+                 I want to try myself as a front-end developer and see the specifics of work from the inside. 
+                 So I started to learn web-technologies, in particular HTML, CSS and JavaScript. 
+                 Studying isn't easy for me,but I like to solve problems and get results.
+                  I'm fast-learning and hard-working person.
+            </p>
 
         </section>
         <section class="code-example">
             <h3>code-example</h3>
+            <pre>
+                <code>
+                    ```
+function fruitProcessor(apples, oranges) {
+  const juice = `Juice with ${apples}
+  apples and ${oranges} oranges.`;
+  return juice;
+}
+
+const appleJuice = fruitProcessor(5, 0);
+console.log(appleJuice);
+```
+
+                </code>
+            </pre>
 
         </section>
         <section class="proffesional-experience">
