feat: add fonts

--- a/index.html
+++ b/index.html
@@ -4,49 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="сss/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <title>HTML-CSS-Git</title>
 </head>
 <body>
     <header>
         <div class="photo">
-            <img src="my_avatar.jpg" alt="my_avatar">
+            <img src="сss/pic/my_avatar.jpg" alt="my_avatar">
         </div>
         <div>    
             <h1>Nikolai Vegera</h1>
             <h2>Trainee Front-end developer</h2>
         </div>
     </header>
+    <aside>
+        <div class="contacts">
+            <ul>
+                <li>Email: wilshere10000@gmail.com</li>
+                <li>Telegram: @MikalaiMikhailavich</li>
+                <li>Discord: mikalaiMikhailavich#7765</li>
+                <li>VK: [Kolya Vegera](https://vk.com/mikalaivegera)</li>
+            </ul>
+        </div>
+        <div class="tech-skills">
+            <h3>Tech-skills</h3>
+            <ul>
+                <li>Markdown</li>
+                <li>Tools/Methodologies Git</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+
+        </div>
+        <div class="languages">
+            <h3>languages</h3>
+            <ol>
+                <li>Russian (native)</li>
+                <li>English (A2)</li>
+            </ol>
+
+        </div>
+    </aside>
     <main>
-        <aside>
-            <div class="contacts">
-                <ul>
-                    <li>Email: wilshere10000@gmail.com</li>
-                    <li>Telegram: @MikalaiMikhailavich</li>
-                    <li>Discord: mikalaiMikhailavich#7765</li>
-                    <li>VK: [Kolya Vegera](https://vk.com/mikalaivegera)</li>
-                </ul>
-            </div>
-            <div class="tech-skills">
-                <h3>Tech-skills</h3>
-                <ul>
-                    <li>Markdown</li>
-                    <li>Tools/Methodologies Git</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                </ul>
-
-            </div>
-            <div class="languages">
-                <h3>languages</h3>
-                <ol>
-                    <li>Russian (native)</li>
-                    <li>English (A2)</li>
-                </ol>
-
-            </div>
-        </aside>
+        
         <section class="summary">
             <h3>Summary</h3>
             <p>I'm 25 years old. I have been working as a design engineer at a factory for 4 years.
