fix: social links

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
         </div>
         <div>    
             <h1>Nikolai Vegera</h1>
-            <h2>Trainee Front-end developer</h2>
+            <h2>Trainee Front-End Developer</h2>
         </div>
     </header>
     <aside>
         <div class="contacts">
-            <ul>
-                <li>Email: wilshere10000@gmail.com</li>
-                <li>Telegram: @MikalaiMikhailavich</li>
-                <li>Discord: mikalaiMikhailavich#7765</li>
-                <li>VK: [Kolya Vegera](https://vk.com/mikalaivegera)</li>
-            </ul>
+            <h3>Contacts</h3>
+                <ul>
+                    <li>Email: <span>wilshere10000@gmail.com</span></li>
+                    <li>Telegram: </span>@MikalaiMikhailavich</span></li>
+                    <li>Discord: </span>mikalaiMikhailavich#7765</span></li>
+                    <li>VK: <a href="https://vk.com/mikalaivegera" target="_blank">Nikolai Vegera</a></li>
+                </ul>
         </div>
         <div class="tech-skills">
             <h3>Tech-skills</h3>
@@ -64,8 +65,7 @@
         <section class="code-example">
             <h3>code-example</h3>
             <pre>
-                <code>
-                    ```
+                <code>                
 function fruitProcessor(apples, oranges) {
   const juice = `Juice with ${apples}
   apples and ${oranges} oranges.`;
@@ -74,8 +74,6 @@ function fruitProcessor(apples, oranges) {
 
 const appleJuice = fruitProcessor(5, 0);
 console.log(appleJuice);
-```
-
                 </code>
             </pre>
 
