--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,87 +8,103 @@
     <link rel="stylesheet" type="text/css" href="сss/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>HTML-CSS-Git</title>
 </head>
+
 <body>
     <header>
         <div class="photo">
             <img src="сss/pic/my_avatar.jpg" alt="my_avatar">
         </div>
-        <div>    
+        <div>
             <h1>Nikolai Vegera</h1>
             <h2>Trainee Front-End Developer</h2>
         </div>
     </header>
-    <aside>
-        <div class="contacts">
-            <h3>Contacts</h3>
-                <ul>
-                    <li>Email: <span>wilshere10000@gmail.com</span></li>
-                    <li>Telegram: </span>@MikalaiMikhailavich</span></li>
-                    <li>Discord: </span>mikalaiMikhailavich#7765</span></li>
-                    <li>VK: <a href="https://vk.com/mikalaivegera" target="_blank">Nikolai Vegera</a></li>
-                </ul>
-        </div>
-        <div class="tech-skills">
-            <h3>Tech-skills</h3>
-            <ul>
-                <li>Markdown</li>
-                <li>Tools/Methodologies Git</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-            </ul>
-
-        </div>
-        <div class="languages">
-            <h3>languages</h3>
-            <ol>
-                <li>Russian (native)</li>
-                <li>English (A2)</li>
-            </ol>
-
-        </div>
-    </aside>
     <main>
-        
-        <section class="summary">
-            <h3>Summary</h3>
-            <p>I'm 25 years old. I have been working as a design engineer at a factory for 4 years.
-                 I want to try myself as a front-end developer and see the specifics of work from the inside. 
-                 So I started to learn web-technologies, in particular HTML, CSS and JavaScript. 
-                 Studying isn't easy for me,but I like to solve problems and get results.
-                  I'm fast-learning and hard-working person.
-            </p>
+        <section class="left">
+            <div class="contacts">
+                <h3>Contacts</h3>
+                <ul>
+                    <li>Email: <i>wilshere10000@gmail.com</i></li>
+                    <li>Telegram: <i>@MikalaiMikhailavich</i></li>
+                    </li>
+                    <li>Discord: <i>mikalaiMikhailavich#7765</i></li>
+                    </li>
+                    <li>VK: <a href="https://vk.com/mikalaivegera" target="_blank"><i>Nikolai Vegera</i></a></li>
+                </ul>
+            </div>
+            <div class="tech-skills">
+                <h3>Tech-skills</h3>
+                <ul>
+                    <li>Markdown</li>
+                    <li>Tools/Methodologies Git</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
 
+            </div>
+            <div class="languages">
+                <h3>languages</h3>
+                <ol>
+                    <li>Russian (native)</li>
+                    <li>English (A2)</li>
+                </ol>
+
+            </div>
         </section>
-        <section class="code-example">
-            <h3>code-example</h3>
-            <pre>
-                <code>                
+        <section class="right">
+            <div class="summary">
+                <h3>Summary</h3>
+                <p>I'm 25 years old. I have been working as a design engineer at a factory for 4 years.
+                    I want to try myself as a front-end developer and see the specifics of work from the inside.
+                    So I started to learn web-technologies, in particular HTML, CSS and JavaScript.
+                    Studying isn't easy for me,but I like to solve problems and get results.
+                    I'm fast-learning and hard-working person.
+                </p>
+            </div>
+            <div class="code-example">
+                <h3>Code-example</h3>
+                <pre>
 function fruitProcessor(apples, oranges) {
-  const juice = `Juice with ${apples}
-  apples and ${oranges} oranges.`;
-  return juice;
-}
-
+      const juice = `Juice with ${apples}
+      apples and ${oranges} oranges.`;
+      return juice;
+    }
+    
 const appleJuice = fruitProcessor(5, 0);
-console.log(appleJuice);
-                </code>
-            </pre>
+console.log(appleJuice);                  
+                </pre>
+            </div>
+            <div class="proffesional-experience">
+                <h3>Proffesional-experience</h3>
+                <p>I haven’t worked in IT, but i have <a
+                        href="https://mikalaimikhailavich.github.io/omnifood_css/Omnifood/">my mini project.</a>
+                </p>
 
-        </section>
-        <section class="proffesional-experience">
-            <h3>proffesional-experience</h3>
-
-        </section>
-        <section class="education">
-            <h3>education</h3>
-
+            </div>
+            <div class="education">
+                <h3>Education</h3>
+                <ol>
+                    <li>JavaScript course: <a href="https://www.udemy.com/course/the-complete-javascript-course/"
+                            target="_blank">The
+                            Complete JavaScript Course 2021: From Zero to Expert!</a>
+                    </li>
+                    <li>HTML and CSS course: <a
+                            href="https://www.udemy.com/course/design-and-develop-a-killer-website-with-html5-and-css3/"
+                            target="_blank">Build
+                            Responsive Real World Websites with HTML5 and CSS3</a>
+                    </li>
+                </ol>
+            </div>
         </section>
     </main>
-    <footer>    
-    </footer>   
+    <footer>
+    </footer>
 </body>
+
 </html>
