--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="photo">
-            <img src="сss/pic/my_avatar.jpg" alt="my_avatar">
+            <img src="сss/img/my_avatar.jpg" alt="my_avatar">
         </div>
         <div>
             <h1>Nikolai Vegera</h1>
@@ -102,6 +102,15 @@ console.log(appleJuice);
         </section>
     </main>
     <footer>
+        <div>
+           <a href="https://github.com/mikalaiMikhailavich/rsschool-cv" target="_blank"> <img src="сss/img/github.png" alt="github.logo" class="footer-logo"></a>
+        </div>
+        <div>
+            <a href="https://rs.school/js" target="_blank"> <img src="сss/img/rs_school_js.svg" alt="rs_school_js.logo" class="footer-logo"></a>
+        </div>
+        <div class="year">
+        <p>2021</p>
+        </div>
     </footer>
 </body>
 
