refactor: rename divs in footer

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@ console.log(appleJuice);
         </section>
     </main>
     <footer>
-        <div>
+        <div class="logo-git">
            <a href="https://github.com/mikalaiMikhailavich/rsschool-cv" target="_blank"> <img src="сss/img/github.png" alt="github.logo" class="footer-logo"></a>
         </div>
-        <div>
+        <div class="logo-rs">
             <a href="https://rs.school/js" target="_blank"> <img src="сss/img/rs_school_js.svg" alt="rs_school_js.logo" class="footer-logo"></a>
         </div>
         <div class="year">
